--- a/2023-2024/projets_fin_annee/UAA12/Assets/CSS/form.css
+++ b/2023-2024/projets_fin_annee/UAA12/Assets/CSS/form.css
@@ -50,6 +50,12 @@ fieldset{
     font-size: 35px;
 }
 
+.btn-big-custom{
+    width: 250px;
+    height: 100px;
+    font-size: 30px;
+}
+
 form label {
     display: block;
     font-size: 2em;
