--- a/2023-2024/projets_fin_annee/UAA12/Assets/CSS/base.css
+++ b/2023-2024/projets_fin_annee/UAA12/Assets/CSS/base.css
@@ -147,3 +147,16 @@ a {
 .back-red{
     background-color: red;
 }
+
+.order-card{
+    border: 1px solid black;
+    
+}
+
+/* admin */
+
+.admin{
+    border: 5px solid black;
+    padding: 10px;
+    margin: 50px;
+}
